# mkube-dashboard

./: .gitignore  CHANGELOG.md  Cargo.toml  Containerfile  build.sh  config.yaml  deploy.sh  pod.yaml
src/: config.rs  dns_client.rs  main.rs  mkube_client.rs  registry_client.rs  template_response.rs
src/routes/: dashboard.rs  dns.rs  events.rs  mod.rs  networks.rs  nodes.rs  pods.rs  registry.rs
static/: style.css
templates/: base.html  dashboard.html  dns.html  dns_zone.html  events.html  network_detail.html  networks.html  node_detail.html  nodes.html  pod_detail.html  pod_logs.html  pods.html  registry.html
templates/partials/: dashboard_content.html
