[package]
name = "mkube-dashboard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mkube-dashboard"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
askama = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tower-http = { version = "0.6", features = ["fs"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
